# GLEE_human_UI

./: .gitignore  README.md
backend/: ai_assistant.py  config.py  game_launcher.py  game_manager.py  glee_bridge.py  interaction_logger.py  main.py  models.py  pyproject.toml  ws_manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ActionButtons.tsx  ChatHistory.tsx  DecisionPanel.tsx  GameBoard.tsx  GameResult.tsx  GameSetup.tsx  InflationBar.tsx  MessagePanel.tsx  SplitSlider.tsx  ToneChips.tsx
frontend/src/hooks/: useEventTracker.ts  useGameState.ts  useWebSocket.ts
scripts/: llm_ai_server.py  mock_ai_server.py  start_dev.sh  start_with_ai.sh
