[project]
name = "glee-human-ui"
version = "0.1.0"
description = "Web UI for humans to play GLEE economic games against AI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
